Overhauled the gradle build script. Included publishing, kdoc generation, testing config, wrapper version specification, new dependency configurations,